# anthropic-throttle-proxy

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  app.json  handoff.md  pyproject.toml  sonar-project.properties
.claude/skills/deploy-dokku/: SKILL.md
.claude/skills/nix-user-service/: SKILL.md
.claude/skills/throttle-incident/: SKILL.md
.github/codeql/: codeql-config.yml
.github/workflows/: attest.yml  ci.yml  codeql.yml  mypy.yml  osv-scanner.yml  quality-gates.yml  scorecard.yml  sonar.yml
.specify/: init-options.json
.specify/memory/: constitution.md
assets/brand/: board.html  brand-spec.md
docs/: ARCHITECTURE.md  DEPLOY-DOKKU.md  SIMULATION-TESTING.md  invisible-throttle-design.md
load/: k6-real-world.js
specs/002-delivery-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-delivery-platform/checklists/: delivery.md  operations.md  requirements.md  security.md
specs/002-delivery-platform/contracts/: env-vars.md  health-json.md  http-routes.md
specs/032-ui-quality-fixes-003/: plan.md  spec.md  tasks.md
specs/032-ui-quality-fixes-003/checklists/: anti-slop.md
specs/085-account-availability/: spec.md
specs/085-account-availability/checklists/: requirements.md
specs/092-sse-keepalive-hold/: spec.md  tasks.md
specs/093-predictive-glide-spillover/: appendix-sota-comparison.md  spec.md  tasks.md
src/anthropic_throttle_proxy/: __init__.py  __main__.py  accounts.py  body_shrink.py  config.py  copilot.py  fleet.py  forwarding.py  ingress.py  limiter.py  metrics.py  pacing.py  pricing.py  proxy.py  ratelimit.py  routing.py  ui_http.py
src/anthropic_throttle_proxy/ui/: __init__.py  advisor_impl.py  routes.py
src/anthropic_throttle_proxy/ui/static/: style.css
src/anthropic_throttle_proxy/ui/templates/: dashboard.html
src/anthropic_throttle_proxy/ui/templates/partials/: advisor.html  config.html  stats.html
tests/: conftest.py  test_accounts.py  test_advisor.py  test_body_shrink.py  test_config_overrides.py  test_copilot.py  test_fleet.py  test_forwarding_paths.py  test_ingress.py  test_keepalive_hold.py  test_limiter.py  test_pacing.py  test_priority_lane.py  test_proxy_app.py  test_proxy_helpers.py  test_queue_wait.py  test_routing.py  test_shutdown.py  test_ui_status.py  test_unified.py
tests/sim/: fake_anthropic.py
