[project]
name = "anthropic-throttle-proxy"
version = "0.1.0"
description = "Self-hosted throttle proxy in front of api.anthropic.com — fleet-wide concurrent-stream guard for #53915, with HTMX dashboard + cheap-AI advisor."
authors = [{ name = "Pedro Balbino", email = "phsb5321@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.10",
    "aiohttp-jinja2>=1.6",
    "jinja2>=3.1",
    "prometheus-client>=0.21",
    "anthropic>=0.40",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anthropic_throttle_proxy"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = ["S101"]  # asserts in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
